--- a/src/app/pages/members/profiel/profiel.component.scss
+++ b/src/app/pages/members/profiel/profiel.component.scss
@@ -1,3 +1,11 @@
 :host {
   padding: 4em;
 }
+
+mat-expansion-panel {
+  width: auto;
+}
+
+// mat-expansion-panel-header {
+//   max-width: 10em;
+// }
